tests/invalid/.cvsignore
*.c
*.c_date
*.d
*.date
*.date0
*.date3
*.dep
*.err_res
*.int
*.int0
*.int2
*.int3
*.mh
*.mih
*.dv
.allres
CLEAN
.mgnuc_copts
.mgnuc_opts
